--- a/src/style.css
+++ b/src/style.css
@@ -3,35 +3,80 @@
 @tailwind utilities;
 
 * {
- font-family: "Poppins", serif;
+  font-family: "Poppins", serif;
   font-style: normal;
 }
 
 .owl-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.owl-next, .owl-prev {
-    font-size: 50px !important;
-    border-radius: 100%;
-    width: 50px;
-    color: #a1a1a1 !important;
-    outline: none !important;
+
+.owl-next,
+.owl-prev {
+  font-size: 50px !important;
+  border-radius: 100%;
+  width: 50px;
+  color: #a1a1a1 !important;
+  outline: none !important;
 }
 
 .owl-stage {
-    padding-bottom: 50px;
+  padding-bottom: 50px;
 }
 
 .spacer {
-    aspect-ratio: 960/300;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  aspect-ratio: 960/300;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .layer {
-    background-image: url('./assets/images/layeredbackgrounddark.svg');
+  background-image: url('./assets/images/layeredbackgrounddark.svg');
+}
+
+@keyframes upDown {
+
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-20px);
+  }
+}
+
+.landing-image-motion {
+  animation: upDown 3s ease-in-out infinite;
+}
+
+.landing-image-motion:hover {
+  animation: none;
+}
+
+.animated-text {
+  position: relative;
+  display: inline-block;
+  color: black;
+  text-shadow: 6px 4px 4px rgba(84, 84, 84, 0.3);
+  overflow: hidden;
+}
+
+/* Pseudo-element for black background */
+.animated-text::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  z-index: 1;
+  /* Place it above the text */
+  clip-path: inset(0 100% 0 0);
+  /* Initially hide the black background */
 }
